--- a/login/pass_change.html
+++ b/login/pass_change.html
@@ -4,92 +4,120 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>新しいパスワード設定</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #e0f2f7; /* 薄い水色の背景 */
+            background-color: #f0f2f5; /* Lighter, modern background */
             margin: 0;
-            font-family: sans-serif;
+            font-family: 'Noto Sans JP', sans-serif; /* Modern Japanese font */
+            color: #333;
         }
 
         .container {
-            background-color: #ffffff; /* 白いコンテナ */
-            border: 1px solid #cceeff; /* 薄い水色の枠線 */
+            background-color: #ffffff;
+            border-radius: 12px; /* More rounded corners */
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08); /* Softer, larger shadow */
             padding: 40px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
-            width: 350px; /* コンテナの幅を調整 */
-            box-sizing: border-box; /* paddingを含めた幅にする */
+            width: 400px; /* Slightly wider container */
+            max-width: 90%; /* Responsive width */
+            box-sizing: border-box;
+        }
+
+        h2 {
+            font-size: 1.8em;
+            color: #2c3e50; /* Darker heading color */
+            margin-bottom: 30px;
+            font-weight: 700;
         }
 
         .form-group {
-            margin-bottom: 25px; /* 各フォームグループ間の間隔を調整 */
+            margin-bottom: 25px;
             text-align: left;
         }
 
         label {
             display: block;
             margin-bottom: 10px;
-            font-size: 1.1em;
-            color: #333;
+            font-size: 1em; /* Slightly smaller label font */
+            color: #555;
+            font-weight: 500;
         }
 
-        input[type="password"] { /* typeをpasswordに変更 */
-            width: calc(100% - 20px); /* 左右のpaddingを考慮 */
-            padding: 12px 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 1.1em;
+        input[type="password"] {
+            width: 100%;
+            padding: 14px 15px; /* Increased padding */
+            border: 1px solid #e0e0e0; /* Lighter border */
+            border-radius: 8px; /* More rounded input fields */
+            font-size: 1.05em;
             box-sizing: border-box;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        input[type="password"]:focus {
+            border-color: #007bff;
+            outline: none;
+            box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25); /* Subtle focus shadow */
         }
 
         .buttons {
             display: flex;
             justify-content: space-between;
-            margin-top: 30px; /* ボタンとフォームグループの間の間隔 */
+            margin-top: 35px;
+            gap: 15px; /* Space between buttons */
         }
 
-        /* Set common button styles here */
         .button {
-            padding: 12px 24px;
-            width: 60px; /* Adjust this width as desired for both buttons */
-            height: 40px;
+            flex-grow: 1; /* Allow buttons to grow and fill space */
+            padding: 14px 25px;
             border: none;
-            border-radius: 5px;
-            font-size: 1.1em;
+            border-radius: 8px; /* More rounded buttons */
+            font-size: 1.05em;
             cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
+            font-weight: 500;
             display: flex;
             justify-content: center;
             align-items: center;
         }
         
+        .button-link {
+            text-decoration: none; /* Remove underline from links */
+            display: flex; /* Make links behave like flex items */
+            flex-grow: 1;
+        }
+
         .back-button {
-            background-color: #f0f0f0;
-            color: #555;
-            border: 1px solid #ddd;
-        }
-
-        .update-button {
-            background-color: #007bff; /* 青色の更新ボタン */
-            color: white;
-            transition: background-color 0.3s ease;
-        }
-
-        .update-button:hover {
-            background-color: #0056b3;
+            background-color: #e9ecef; /* Lighter gray for back button */
+            color: #495057;
+            border: 1px solid #dee2e6;
         }
 
         .back-button:hover {
-            background-color: #e0e0e0;
+            background-color: #dae0e5;
+            transform: translateY(-2px); /* Slight lift effect */
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .update-button {
+            background-color: #007bff;
+            color: white;
+        }
+
+        .update-button:hover {
+            background-color: #0069d9;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 10px rgba(0, 123, 255, 0.2);
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <h2>新しいパスワードを設定</h2>
         <div class="form-group">
             <label for="new_password">新しいパスワード</label>
             <input type="password" id="new_password" name="new_password" placeholder="新しいパスワードを入力">
@@ -99,8 +127,12 @@
             <input type="password" id="confirm_password" name="confirm_password" placeholder="新しいパスワードを再入力">
         </div>
         <div class="buttons">
-            <a href="change.html" class="button-link"><div class="button back-button">戻る</div></a>
-            <a href="change.html" class="button-link"><div class="button update-button">更新</div></a>
+            <a href="change.html" class="button-link">
+                <div class="button back-button">戻る</div>
+            </a>
+            <a href="change.html" class="button-link">
+                <div class="button update-button">更新</div>
+            </a>
         </div>
     </div>
 </body>
