--- a/sinki/login.html
+++ b/sinki/login.html
@@ -4,29 +4,151 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>出席簿管理システム - ログイン</title>
-    <link rel="stylesheet" href="../sinki_css/login.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Noto Sans JP', sans-serif; /* Modern Japanese font */
+            background-color: #f0f2f5; /* Light gray background */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            color: #333;
+        }
+
+        .login-container { /* Renamed from .logingamen for clarity */
+            background-color: #ffffff;
+            padding: 40px;
+            border-radius: 12px; /* More rounded corners */
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08); /* Softer, larger shadow */
+            width: 100%;
+            max-width: 400px; /* Adjusted max-width for login form */
+            box-sizing: border-box;
+            text-align: center; /* Center content within the container */
+        }
+
+        .logo {
+            max-width: 100px; /* Adjust logo size */
+            height: auto;
+            margin-bottom: 25px; /* Space below logo */
+        }
+
+        h2 {
+            font-size: 1.8em;
+            color: #2c3e50;
+            margin-bottom: 30px;
+            font-weight: 700;
+        }
+
+        .form-group { /* Replaced .user-Email for general input grouping */
+            margin-bottom: 20px;
+            text-align: left; /* Align labels and inputs to the left */
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-size: 0.95em;
+            color: #555;
+            font-weight: 500;
+        }
+
+        .form-group input[type="text"],
+        .form-group input[type="password"] {
+            width: 100%;
+            padding: 14px 15px; /* Consistent padding */
+            border: 1px solid #e0e0e0; /* Lighter border */
+            border-radius: 8px; /* More rounded input fields */
+            font-size: 1.05em;
+            box-sizing: border-box;
+            background-color: #fcfcfc; /* Slightly off-white background for inputs */
+            transition: border-color 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .form-group input:focus {
+            border-color: #007bff;
+            outline: none;
+            box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25); /* Subtle focus shadow */
+        }
+
+        /* --- CHANGE START --- */
+        .link-group {
+            text-align: center; /* Changed to center-align the link */
+            margin-top: 5px; /* Adjust margin as needed */
+            margin-bottom: 25px;
+        }
+        /* --- CHANGE END --- */
+
+        .link-group a {
+            color: #007bff;
+            text-decoration: none;
+            font-size: 0.9em;
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
+
+        .link-group a:hover {
+            color: #0056b3;
+            text-decoration: underline;
+        }
+
+        button[type="submit"] {
+            width: 100%;
+            padding: 15px; /* More padding for a substantial button */
+            background-color: #007bff; /* Blue login button */
+            color: white;
+            border: none;
+            border-radius: 8px; /* Rounded button corners */
+            font-size: 1.15em; /* Larger font size */
+            font-weight: 600;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0, 123, 255, 0.2); /* Subtle shadow for button */
+        }
+
+        button[type="submit"]:hover {
+            background-color: #0056b3;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(0, 123, 255, 0.3);
+        }
+
+        .additional-links { /* New class for bottom links */
+            margin-top: 25px;
+        }
+
+        .additional-links a {
+            color: #666;
+            text-decoration: none;
+            font-size: 0.9em;
+            transition: color 0.3s ease;
+        }
+
+        .additional-links a:hover {
+            color: #333;
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <div class="logingamen">
-        <img src="your_logo.png" alt="" class="logo"> 
+    <div class="login-container">
         <h2>出席簿管理システム</h2>
-        <form action="/login" method="post"> 
-            <div class="user-Email">
+        <form action="/login" method="post">
+            <div class="form-group">
                 <label for="username">ユーザー名またはメールアドレス</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username" placeholder="ユーザー名またはメールアドレスを入力" required>
             </div>
-            <div class="user-Email">
+            <div class="form-group">
                 <label for="password">パスワード</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" placeholder="パスワードを入力" required>
             </div>
-            <div class="sinki">
-                <a href="#" class="sinkitouroku">新規登録はこちら</a>
-            </div><!-- /.sinki --><br>
+            <div class="link-group">
+                <a href="user_registration.html" class="register-link">新規登録はこちら</a>
+            </div>
 
             <button type="submit">ログイン</button>
-            
         </form>
-        <div class="links">
+        <div class="additional-links">
             <a href="#">パスワードを忘れた場合</a>
         </div>
     </div>
